--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,25 +1,98 @@
 .logo {
   width: 120px;
   height: 31px;
-  background: rgba(255, 255, 255, .2);
+  background: rgba(255, 255, 255, 0.2);
   margin: 16px 24px 16px 0;
   float: left;
 }
 
 .header {
-  position: fixed;
-  width: 100%
+  position: relative;
+  background: #fff;
+  padding: 0;
+}
+
+.header-progress {
+  width: 100%;
+  margin-top: -8px;
 }
 
 .title {
   margin-top: 15px;
 }
 
-.right {
+.avatar-container {
+  text-align: center;
+  margin-bottom: 40px;
+  margin-top: 20px;
+}
+
+:host ::ng-deep .trigger {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+:host ::ng-deep .trigger:hover {
+  color: #1890ff;
+}
+
+:host ::ng-deep .logo {
+  height: 32px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px;
+}
+
+.header-menu {
   float: right;
 }
 
-.header-list {
-  line-height: 64px;
-  margin-right: -40px;
+.search {
+  padding: 16px 0;
+  margin: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.search-input {
+  min-width: 300px;
+  flex: 1;
+}
+
+.search-radio {
+}
+
+.content {
+  background: #fff;
+  padding: 24px;
+  min-height: 380px;
+}
+
+.content-wrapper {
+  padding: 20px;
+}
+
+.users-avator {
+  margin: 5px;
+}
+
+.list {
+  width: 240px;
+  display: inline-block;
+  margin: 10px;
+}
+
+:host ::ng-deep .ant-card-meta-description {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+:host ::ng-deep .ant-card-head-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
