--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,117 @@
-<nz-layout class="layout">
-  <nz-header class="header">
-    <div class="logo"></div>
-    <ul nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'" class="header-list">
-      <li nz-menu-item>房间列表</li>
-      <li nz-menu-item>关于</li>
-      <li nz-menu-item class="right">
-        <nz-avatar [nzText]="name" nzSize="large" [ngStyle]="{'background-color':color}" style="vertical-align: middle;"></nz-avatar>
+<nz-layout>
+  <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="triggerTemplate">
+    <div class="avatar-container">
+      <nz-avatar [nzText]="'app'" nzSize="large"></nz-avatar>
+    </div>
+    <ul nz-menu [nzTheme]="'dark'" [nzMode]="'inline'" style="line-height: 64px;">
+      <li nz-menu-item>{{ isCollapsed ? "房间" : "房间列表"}}</li>
+      <li nz-menu-item>{{ isCollapsed ? "关于" : "关于项目"}}</li>
+      <li nz-menu-item>{{ isCollapsed ? "切换" : "切换身份"}}</li>
+      <li nz-menu-item>
+        <nz-divider></nz-divider>
       </li>
-      <li nz-menu-item class="right">
-        正在播放：
-        <span>123132</span>
+      <li nz-menu-item>
+        歌名1
+      </li>
+      <li nz-menu-item>
+        歌名1
+      </li>
+      <li nz-menu-item>
+        歌名1
+      </li>
+      <li nz-menu-item>
+        歌名1
+      </li>
+      <li nz-menu-item>
+        歌名1
+      </li>
+      <li nz-menu-item>
+        歌名1
+      </li>
+      <li nz-menu-item>
+        歌名1
       </li>
     </ul>
-  </nz-header>
-  <router-outlet></router-outlet>
-  <nz-footer style="text-align: center">Ant Design ©2017 Implement By Angular</nz-footer>
+  </nz-sider>
+  <nz-layout>
+    <nz-header class="header">
+      <i class="anticon trigger" [class.anticon-menu-fold]="!isCollapsed" [class.anticon-menu-unfold]="isCollapsed" (click)="isCollapsed=!isCollapsed"></i>
+      <span>正在播放：歌名</span>
+      <div class="header-menu">
+        <ul nz-menu [nzMode]="'horizontal'" style="line-height: 64px;">
+          <li nz-menu-item>
+            <i class="anticon anticon-mail"></i>点歌
+          </li>
+
+          <li nz-menu-item>
+            <i class="anticon anticon-mail"></i>切歌
+          </li>
+
+          <li nz-menu-item>
+            <i class="anticon anticon-mail"></i>静音
+          </li>
+
+          <li nz-menu-item>
+            <i class="anticon anticon-mail"></i>只静音当前歌曲
+          </li>
+        </ul>
+      </div>
+    </nz-header>
+    <nz-progress class="header-progress" [nzShowInfo]="false" [nzPercent]="50" [nzStrokeWidth]="3" nzStatus="active"></nz-progress>
+    <nz-content class="content-wrapper">
+      <h2 class="title">房间名</h2>
+      <p>介绍</p>
+
+      <div class="users">
+        <nz-avatar class="users-avator" nzIcon="anticon anticon-user"></nz-avatar>
+        <nz-avatar class="users-avator" nzText="U"></nz-avatar>
+        <nz-avatar class="users-avator" nzText="USER"></nz-avatar>
+        <nz-avatar class="users-avator" nzIcon="anticon anticon-user" nzSrc="//zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"></nz-avatar>
+        <nz-avatar class="users-avator" nzText="U" style="color:#f56a00; background-color:#fde3cf;"></nz-avatar>
+        <nz-avatar class="users-avator" nzIcon="anticon anticon-user" style="background-color:#87d068;"></nz-avatar>
+      </div>
+      <div class="search">
+        <div class="search-radio">
+          <nz-radio-group [(ngModel)]="radioValue">
+            <label nz-radio-button nzValue="1">歌曲</label>
+            <label nz-radio-button nzValue="10">专辑</label>
+            <label nz-radio-button nzValue="100">歌手</label>
+          </nz-radio-group>
+
+        </div>
+        <div class="search-input">
+          <nz-input-group nzSearch [nzSuffix]="suffixIconButton">
+            <input type="text" nz-input placeholder="input search text">
+          </nz-input-group>
+          <ng-template #suffixIconButton>
+            <button nz-button nzType="primary" nzSearch>
+              <i class="anticon anticon-search"></i>
+            </button>
+          </ng-template>
+        </div>
+      </div>
+      <div *ngFor="let music of list;" class="list">
+        <nz-card [nzTitle]="music.name" class="list-card" [nzCover]="coverTemplate" [nzActions]="[actionSetting,actionEdit]">
+          <nz-card-meta [nzTitle]="music.artists" [nzDescription]="music.album" [nzAvatar]="avatarTemplate"></nz-card-meta>
+        </nz-card>
+        <ng-template #avatarTemplate>
+          <nz-avatar [nzSrc]="music.artistsUrl"></nz-avatar>
+        </ng-template>
+        <ng-template #coverTemplate>
+          <img alt="album" [src]="music.albumUrl" />
+        </ng-template>
+        <ng-template #actionSetting>
+          <i nz-tooltip nzTitle="单次点歌" class="anticon anticon-setting"></i>
+        </ng-template>
+        <ng-template #actionEdit>
+          <i nz-tooltip nzTitle="重复点歌" class="anticon anticon-edit"></i>
+        </ng-template>
+      </div>
+      <div class=" content ">Content</div>
+    </nz-content>
+    <nz-footer style="text-align: center; ">Ant Design ©2017 Implement By Angular</nz-footer>
+  </nz-layout>
 </nz-layout>
+<ng-template #trigger>
+  <i class="anticon anticon-up "></i>
+</ng-template>
