--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -1,11 +1,11 @@
 <nz-layout>
   <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="triggerTemplate">
     <div class="avatar-container">
-      <nz-avatar [nzText]="'app'" nzSize="large"></nz-avatar>
+      <nz-avatar [ngStyle]="{'background-color':socket.user.avatarColor}" [nzText]="socket.user.avatarText" nzSize="large"></nz-avatar>
     </div>
     <ul nz-menu [nzTheme]="'dark'" [nzMode]="'inline'" style="line-height: 64px;">
-      <li nz-menu-item>{{ isCollapsed ? "房间" : "房间列表"}}</li>
-      <li nz-menu-item>{{ isCollapsed ? "关于" : "关于项目"}}</li>
+      <!-- <li nz-menu-item>{{ isCollapsed ? "房间" : "房间列表"}}</li> -->
+      <!-- <li nz-menu-item>{{ isCollapsed ? "关于" : "关于项目"}}</li> -->
       <li nz-menu-item>{{ isCollapsed ? "切换" : "切换身份"}}</li>
       <li nz-menu-item>
         <nz-divider></nz-divider>
@@ -59,22 +59,18 @@
     </nz-header>
     <nz-progress class="header-progress" [nzShowInfo]="false" [nzPercent]="50" [nzStrokeWidth]="3" nzStatus="active"></nz-progress>
     <nz-content class="content-wrapper">
-      <h2 class="title">房间名</h2>
-      <p>介绍</p>
+      <!-- <h2 class="title">房间名</h2>
+      <p>介绍</p> -->
 
       <div class="users">
-        <nz-avatar class="users-avator" nzIcon="anticon anticon-user"></nz-avatar>
-        <nz-avatar class="users-avator" nzText="U"></nz-avatar>
-        <nz-avatar class="users-avator" nzText="USER"></nz-avatar>
-        <nz-avatar class="users-avator" nzIcon="anticon anticon-user" nzSrc="//zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"></nz-avatar>
-        <nz-avatar class="users-avator" nzText="U" style="color:#f56a00; background-color:#fde3cf;"></nz-avatar>
-        <nz-avatar class="users-avator" nzIcon="anticon anticon-user" style="background-color:#87d068;"></nz-avatar>
+        <nz-avatar *ngFor="let user of socket.onlineUser;" class="users-avator" [ngStyle]="{'background-color':user.avatarColor}"
+          [nzText]="user.avatarText"></nz-avatar>
       </div>
       <div class="search">
 
         <div class="search-input">
           <nz-input-group nzSearch [nzSuffix]="suffixIconButton">
-            <input type="text" (keyup.enter)="onSearch()" nz-input [(ngModel)]="keyword" placeholder="input search text">
+            <input type="text" (keyup.enter)="onSearch()" nz-input [(ngModel)]="keyword" placeholder="歌名/歌手/专辑">
           </nz-input-group>
           <ng-template #suffixIconButton>
             <button nz-button nzType="primary" nzSearch (click)="onSearch()">
@@ -84,20 +80,13 @@
         </div>
       </div>
       <div *ngFor="let music of list;" class="list">
-        <nz-card [nzTitle]="music.name" class="list-card" [nzActions]="[actionSetting,actionEdit]">
+        <nz-card (click)="select(music)" [nzTitle]="music.name" class="list-card">
           <nz-card-meta [nzTitle]="music.artist" [nzDescription]="music.album"></nz-card-meta>
         </nz-card>
-
-        <ng-template #actionSetting>
-          <i (click)="select(music.id)" nz-tooltip nzTitle="单次点歌" class="anticon anticon-setting"></i>
-        </ng-template>
-        <ng-template #actionEdit>
-          <i nz-tooltip nzTitle="重复点歌" class="anticon anticon-edit"></i>
-        </ng-template>
       </div>
-      <nz-pagination (nzPageIndexChange)="choosePage($event)" [nzPageIndex]="page" [nzPageSize]="pageSize" [nzHideOnSinglePage]="true"
+      <nz-pagination class="pagination" (nzPageIndexChange)="choosePage($event)" [nzPageIndex]="page" [nzPageSize]="pageSize" [nzHideOnSinglePage]="true"
         [nzTotal]="songCounts"></nz-pagination>
-      <div class=" content ">Content</div>
+      <div class="content">Content</div>
     </nz-content>
     <nz-footer style="text-align: center; ">SJTU SOCKET-MUSIC ©2017 Implement By Angular</nz-footer>
   </nz-layout>
