--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -1,5 +1,5 @@
-<nz-layout>
-  <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="triggerTemplate">
+<nz-layout class="layout" [style.padding-left.px]="isCollapsed ? 80 : 200">
+  <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="triggerTemplate" class="slider">
     <div class="avatar-container">
       <nz-avatar [ngStyle]="{'background-color':socket.user.avatarColor}" [nzText]="socket.user.avatarText" nzSize="large"></nz-avatar>
     </div>
@@ -10,27 +10,13 @@
       <li nz-menu-item>
         <nz-divider></nz-divider>
       </li>
-      <li nz-menu-item>
-        歌名1
-      </li>
-      <li nz-menu-item>
-        歌名1
-      </li>
-      <li nz-menu-item>
-        歌名1
-      </li>
-      <li nz-menu-item>
-        歌名1
-      </li>
-      <li nz-menu-item>
-        歌名1
-      </li>
-      <li nz-menu-item>
-        歌名1
-      </li>
-      <li nz-menu-item>
-        歌名1
-      </li>
+      <div class="song-container">
+        <li [nzTitle]="song.artist + ' - '  + song.album" nzPlacement="right" nz-tooltip nz-menu-item *ngFor="let song of socket.activeSongs;">
+          {{ song.name }}
+        </li>
+      </div>
+
+
     </ul>
   </nz-sider>
   <nz-layout>
@@ -40,7 +26,9 @@
       <div class="header-menu">
         <ul nz-menu [nzMode]="'horizontal'" style="line-height: 64px;">
           <li nz-menu-item>
-            <i class="anticon anticon-mail"></i>点歌
+            <label nz-checkbox [(ngModel)]="showSearch">
+              搜索
+            </label>
           </li>
 
           <li nz-menu-item>
@@ -52,7 +40,7 @@
           </li>
 
           <li nz-menu-item>
-            <i class="anticon anticon-mail"></i>只静音当前歌曲
+            <i class="anticon anticon-mail"></i>单曲静音
           </li>
         </ul>
       </div>
@@ -66,26 +54,29 @@
         <nz-avatar *ngFor="let user of socket.onlineUser;" class="users-avator" [ngStyle]="{'background-color':user.avatarColor}"
           [nzText]="user.avatarText"></nz-avatar>
       </div>
-      <div class="search">
 
-        <div class="search-input">
-          <nz-input-group nzSearch [nzSuffix]="suffixIconButton">
-            <input type="text" (keyup.enter)="onSearch()" nz-input [(ngModel)]="keyword" placeholder="歌名/歌手/专辑">
-          </nz-input-group>
-          <ng-template #suffixIconButton>
-            <button nz-button nzType="primary" nzSearch (click)="onSearch()">
-              <i class="anticon anticon-search"></i>
-            </button>
-          </ng-template>
+      <div *ngIf="showSearch">
+        <div class="search">
+          <div class="search-input">
+            <nz-input-group nzSearch [nzSuffix]="suffixIconButton">
+              <input type="text" (keyup.enter)="onSearch()" nz-input [(ngModel)]="keyword" placeholder="歌名/歌手/专辑">
+            </nz-input-group>
+            <ng-template #suffixIconButton>
+              <button nz-button nzType="primary" nzSearch (click)="onSearch()">
+                <i class="anticon anticon-search"></i>
+              </button>
+            </ng-template>
+          </div>
         </div>
+        <div *ngFor="let music of list;" class="list">
+          <nz-card (click)="select(music)" [nzTitle]="music.name" class="list-card">
+            <nz-card-meta [nzTitle]="music.artist" [nzDescription]="music.album"></nz-card-meta>
+          </nz-card>
+        </div>
+        <nz-pagination class="pagination" (nzPageIndexChange)="choosePage($event)" [nzPageIndex]="page" [nzPageSize]="pageSize" [nzHideOnSinglePage]="true"
+          [nzTotal]="songCounts"></nz-pagination>
       </div>
-      <div *ngFor="let music of list;" class="list">
-        <nz-card (click)="select(music)" [nzTitle]="music.name" class="list-card">
-          <nz-card-meta [nzTitle]="music.artist" [nzDescription]="music.album"></nz-card-meta>
-        </nz-card>
-      </div>
-      <nz-pagination class="pagination" (nzPageIndexChange)="choosePage($event)" [nzPageIndex]="page" [nzPageSize]="pageSize" [nzHideOnSinglePage]="true"
-        [nzTotal]="songCounts"></nz-pagination>
+
       <div class="content">Content</div>
     </nz-content>
     <nz-footer style="text-align: center; ">SJTU SOCKET-MUSIC ©2017 Implement By Angular</nz-footer>
